# nasm_game

./: .gitignore  LICENSE  README.md  Untitled.ipynb  makefile  moderncv.tex  permutaion.txt  preamble.tex  test.sh
GameOS/: makefile
GameOS/asm/: link.ld  main.S  makefile
GameOS/nasm/: Linear.md  Quaternion.md  boot.asm  makefile
GeometryAlgebra/: 01-intro.ipynb  02-GA_matrix.ipynb  Untitled.ipynb
Root/: functionR.C  graph.C  hello.C  histogram.C  randomTree.C  randomTree.root  treeR.C  treeR.root  tut_1e1.root  tut_1e3.root
Xeus/: test.ipynb
asm_cxx/: makefile
asm_cxx/src/: commandline_parameter.c  double_pointer.c  printf_redzone_15_8-no-pie.asm  printf_redzone_15_8.asm  single_pointer.c
bash/: bash-set.tex  makefile
blas/: blastext.c
c_asm/00-hello/: hello.asm
c_asm/11-linking_modules/: main.asm
c_asm/12-c_call_asm/: README.md  makefile
c_asm/13-asm_call_c/: main.asm  message.c
c_asm/19-passing_and_return_value/: math.c
c_haskell/: Fibs.hs  makefile
c_haskell/cxx/: Foo.hs  Foo_stub.h  makefile  test.cpp
cc/: README.md  makefile
cc/src/: malloc_dynamic.c  sdl2.c
clisp/: README.md
concept/: makefile
concept/src/: concept.cpp
cxx/: cxx_terms.tex  makefile  terms_cxx.tex
cxx/src/: fold_variadic.cpp  mgl2.cpp  pretty_function.cpp  std_move.cpp  using_arg.cpp  using_variadic.cpp
gas/: fibs.S  makefile  pritf_gas.S  pritf_gas.asm
gas/libs/: maxOfThree.S
gdb/: main.c  massif.out.5685  valgrind.c
git/: git.tex  makefile
glfw/: makefile
haskell/: A.txt  FunctonOfCategorys.tex  LICENSE  README.md  cabal.project  demo.cabal  func.tex  ghc.tex  haskell-List.tex  haskell-Precedence.tex  haskell-do.tex  haskell-type.tex  haskell.cabal  haskell.tex  hie.yaml  makefile  moderncv.tex
haskell/ademo/: CHANGELOG.md  ademo.cabal  makefile
haskell/ademo/app/: CountDown.hs  ForM.hs
haskell/ademo/src/: Firstlib.hs
haskell/ademo/src/Base/: Permutation.hs
haskell/ademo/src/M1/: Class.hs  List.hs
haskell/ademo/tests/: Test.hs
haskell/app/: ForM  ForM.hs  FpCourse.hs  Main.hs  Sudoku.hs  Tmp.hs  TypeDataClassInstance.hs
haskell/arrayFibonacci/: CHANGELOG.md  arrayFibonacci.cabal  makefile
haskell/arrayFibonacci/app/: Main.hs
haskell/bdemo/: makefile
haskell/bdemo/app/: Main.hs
haskell/countdown/: countdown.cabal  makefile
haskell/countdown/app/: Countdown.hs  Main.hs
haskell/domainModeling/: CHANGELOG.md  domainModeling.cabal  makefile
haskell/domainModeling/app/: Main.hs
haskell/gui/: gui.cabal  makefile
haskell/gui/app/: Main.hs  Myglfw.hs
haskell/learnyouahaskell/: CHANGELOG.md  learnyouahaskell.cabal  makefile
haskell/lense/: CHANGELOG.md  lense.cabal  makefile
haskell/lense/app/: LenseIdConstFunctor.hs  LenseMultiple.hs  LenseOver.hs  Main.hs
haskell/prj/: cabal.project  ghc.tex  hie.yaml
haskell/prj/ademo/: ademo.cabal  makefile
haskell/prj/ademo/app/: Main.hs
haskell/prj/ademo/src/M1/: List.hs  Optional.hs  Validation.hs
haskell/prj/ademo/src/base/: Permutation.hs
haskell/prj/ademo/test/: Test.hs
haskell/prj/bdemo/: CHANGELOG.md  bdemo.cabal
haskell/prj/demoA/: demoA.cabal  makefile
haskell/prj/demoA/app/: ForM.hs  Main.hs
haskell/prj/demoA/src/: Hello.hs  Mylib.hs
haskell/prj/demoA/src/Ch01/: Chapter01.hs
haskell/prj/demoA/src/Ga/: Expr.hs
haskell/prj/demoB/: demoB.cabal
haskell/prj/demoB/app/: Main.hs
haskell/quickCheck/: CHANGELOG.md  makefile  quickCheck.cabal
haskell/quickCheck/app/: Main.hs
haskell/quickCheck/src/: Lib.hs  Lib2.hs
haskell/rankN/: CHANGELOG.md  makefile  rankN.cabal
haskell/rankN/app/: Main.hs
haskell/src/: Func.hs  Lib.hs  Main.hs  findN.hs  makefile  pgp-countdown.hs
haskell/src/Ch01/: Chapter01.hs
haskell/src/Ga/: CountDown.hs  L.hs  Lib.hs  Peano.hs  Statistics.hs  Tree.hs
haskell/src/base/: Btree.hs  FunctorApplicative.hs  Permutation.hs
haskell/test/: Test.hs  makefile  test.cabal
haskell/test/app/: Main.hs
haskell/test/src/: Test_QuickCheck.hs  Test_hspec.hs
haskell/tictactoe/: makefile  tictactoe.cabal
haskell/tictactoe/app/: Main.hs
haskell/tictactoe/src/: tictactoe.c
haskell/tictactoe/src/includes/: game.h
i386/: gas_vs_nasm.tex  makefile
invaders/: README.md
jlib/: makefile
jupyter/: 3d-contour.py  3d-scatter3d-3d_points_lines.py  3d-test.py  README.md  class.ipynb  interactive_3d_plot.ipynb  matplotlib.py  matplotlib_essentials.ipynb  plot.py  use_latex.ipynb
latex/: beamer.tex  cv-tikiz.tex  makefile  moderncv.tex  template.tex  tikz-2d.tex  tikz-single.tex
libs/: makefile
linuxnasm_be/: CMakeLists.txt  Dockerfile  makefile
linuxnasm_be/.cache/clangd/index/: main.cpp.3BF28D7F4FF828F3.idx  main.cpp.F46F53D557DAA069.idx
linuxnasm_be/01-integer/: CMakeLists.txt  integerArithmetic.asm  main-out  main.cpp  makefile
linuxnasm_be/02-memory/: CMakeLists.txt  main-out  main.cpp  memoryAddressing.asm
linuxnasm_be/02_07-ConditionCodes/: main.cpp  makefile
linuxnasm_be/src/asm/: hello.asm
llvm/: foo  foo.profdata  foo.profraw
mathgl/: makefile  report.tex  translator.tex
matplotlib/: 2d-all.ipynb  README.md  diff.py  electric_filed.py  gradient-contour.py  latex.py  math-term.md  scatter.py  test.py  vector-quiver.ipynb  vector-streamlines.ipynb
pentesting/: shellcode.c
plplot/: makefile
pong/: makefile  pong.asm  sector-1.asm  sector-3.asm
python/: Expr.ipynb  TaylorSeries.ipynb  Terms.ipynb  jupyterlab-settings.ipynb  line_integral.ipynb  line_integral.py  sage-vector.ipynb  sage_test.ipynb  vector.py
shellcode/: pentesteracademy：x86_64 Assembly Language and Shellcoding on Linux-8rncBCVySEw.f247.webm.ytdl
snippet/: makefile  snippet.tex
src/: invaders.asm
step/: 01-delaytest.asm
vulkan/: CMakeLists.txt  grep_sed.tex  makefile  taylors.tex  vulkan.tex
wasm/: a.out.js  fn.html  fn.js  fn.wasm  index.html  script.js  test.c
x86_64/: 14-shellcode.c  14-shellcode_806.c  32-ntuto.nasm  README.md  ctuto.c  ctuto.c.s  ctuto.s  datatype  endian  fprint.asm  hello  hello.dump  log2  log2.sh  makefile  ntuto.nasm  out-c  out-g  out-n  stuto.S  stuto.s  test.nasm  tmp
(+576 files in other folders)
