cabal-version:      2.4
name:               demo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             karng87
maintainer:         karng87@gmail.com
common common-all
    build-depends: base ^>= 4.14
    default-language: Haskell2010
    ghc-options: -Wall
-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable demo
    import: common-all
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Ga.Lib

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs: app, src

executable form
    import:	common-all
    main-is: ForM.hs
    hs-source-dirs: app
    ghc-options: -main-is ForM
--		other-modules: Lib

executable sudoku
    import: common-all
    main-is: Sudoku.hs
    hs-source-dirs: app 
    ghc-options: -main-is Sudoku
