cabal-version:      2.4
name:               demo
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             karng87
maintainer:         karng87@gmail.com


extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules: Ga.Lib
    hs-source-dirs: src
    -- other-modules:
    build-depends: base ^>= 4.14, titlecase
    ghc-options: -Wall, -haddock
    default-language: Haskell2010

executable Main
    main-is: Main.hs
    -- Modules included in this executable, other than Main.
    other-modules: Ga.Lib

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs: app, src
    build-depends: base ^>= 4.14
    ghc-options: -Wall, -haddock
    default-language: Haskell2010

executable Tmp
    main-is: Tmp.hs
    hs-source-dirs: app
    -- other-modules: Lib
    build-depends: base ^>= 4.14
    ghc-options: -Wall -haddock -main-is Tmp
    default-language: Haskell2010

executable ForM
    main-is: ForM.hs
    hs-source-dirs: app
    build-depends: base ^>= 4.14
    ghc-options: -Wall, -haddock -main-is ForM
    default-language: Haskell2010
    -- other-modules: Lib

executable Sudoku
    main-is: Sudoku.hs
    hs-source-dirs: app 
    build-depends: base ^>= 4.14
    ghc-options: -Wall, -haddock -main-is Sudoku
    default-language: Haskell2010

executable FpCourse
    main-is: FpCourse.hs
    hs-source-dirs: app, src
    -- other-modules: Lib
    build-depends: base ^>= 4.14
    ghc-options: -Wall, -haddock -main-is FpCourse
    default-language: Haskell2010

executable TypeDataClassInstance
    main-is: TypeDataClassInstance.hs
    hs-source-dirs: app
    -- other-modules: Lib
    build-depends: base ^>= 4.14
    ghc-options: -Wall, -haddock -main-is TypeDataClassInstance
    default-language: Haskell2010
