cabal-version:      3.0
name:               lense
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             karng87
maintainer:         karng87@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable LenseMultiple
    main-is: LenseMultiple.hs
    hs-source-dirs: app
    build-depends: base ^>= 4.14
    -- other-modules: Hello
    ghc-options: -Wall -haddock -main-is LenseMultiple
    default-language: Haskell2010
executable LenseOver
    main-is: LenseOver.hs
    hs-source-dirs: app
    build-depends: base ^>= 4.14
    -- other-modules: Hello
    ghc-options: -Wall -haddock -main-is LenseOver
    default-language: Haskell2010

executable LenseIdConstFunctor
    main-is: LenseIdConstFunctor.hs
    hs-source-dirs: app
    build-depends: base ^>= 4.14.3.0
    -- other-modules: Hello
    ghc-options: -Wall -haddock -main-is LenseIdConstFunctor
    default-language: Haskell2010

executable Main
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -haddock
