cabal-version:      3.0
name:               test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             karng87
maintainer:         karng87@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable test
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Test_QuickCheck

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, hspec, QuickCheck
    hs-source-dirs:   app, src
    default-language: Haskell2010

library
    exposed-modules: Test_hspec, Test_QuickCheck
    hs-source-dirs: src
    build-depends: base ^>= 4.14, hspec, QuickCheck
    -- other-modules: Hello
    ghc-options: -Wall -haddock
    default-language: Haskell2010
